Basic HTML pages for Page 1 of the Design PDF, including links from a specific sphere to a later one.(subject to change + will add a backwards button later if needed)F

--- a/specificSphere.html
+++ b/specificSphere.html
@@ -11,11 +11,11 @@
 <body>
 
     <header>
-        <h1>MySpheres</h1>
+        <h1>User Specific Spheres</h1>
     </header>
 
     <main>
-        <p>My Spheres display Page</p>
+        <p>Spheres that any one user might have</p>
     </main>
 
     <footer>
@@ -23,11 +23,5 @@
     </footer>
 
 </body>
-<button onclick="goToSphere()">Open Sphere Page</button>
 
-<script>
-function goToSphere() {
-    window.location.href = "specificSphere.html";
-}
-</script>
 </html>
