--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
     
     <!-- Load JS modules -->
     <script src="api.js"></script>
+    <script src="session-manager.js"></script>
     <script src="auth-manager.js"></script>
     <script src="ui-manager.js"></script>
     <script src="app.js"></script>
