filled in the rest of the pages, added backwards buttons to the specific sphere series

--- a/pages/specificSphere.html
+++ b/pages/specificSphere.html
@@ -24,4 +24,30 @@
 
 </body>
 
+<button onclick="goToSphere()">Open Peer Calendar</button>
+
+<script>
+function goToSphere() {
+    window.location.href = "peerCalendar.html";
+}
+</script>
+
+<button onclick="goToSphere()">Open Peer Chat</button>
+
+<script>
+function goToSphere() {
+    window.location.href = "peerChat.html";
+}
+</script>
+
+<button onclick="goToSphere()">Open Peer Study</button>
+
+<script>
+function goToSphere() {
+    window.location.href = "peerStudy.html";
+}
+</script>
+
+
+
 </html>
