--- a/pages/group-flashcards.html
+++ b/pages/group-flashcards.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <script src="../config.js"></script>
   <title>PeerSphere – Group Flashcards</title>
-  <meta http-equiv="Content-Security-Policy"
-        content="default-src 'self'; script-src 'self' 'unsafe-inline'; style-src 'self'; connect-src 'self'">
+  <link rel="stylesheet" href="../styles/space-theme.css">
   <style>
     body {
       margin: 0;
