--- a/pages/homePage.html
+++ b/pages/homePage.html
@@ -2,264 +2,352 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta
-      http-equiv="Content-Security-Policy"
-      content="default-src 'self'; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline'; connect-src 'self' https://peersphere-backend-691058527412.us-central1.run.app"
-    />
+    <script src="../config.js"></script>
+    <link rel="stylesheet" href="../styles/space-theme.css">
     <title>PeerSphere - Home</title>
-    <link rel="stylesheet" href="../styles.css" />
     <style>
-      body {
-        background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-        min-height: 100vh;
-        margin: 0;
-        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
-      }
-
       .home-container {
-        max-width: 1200px;
+        position: relative;
+        max-width: 1400px;
         margin: 0 auto;
-        padding: 40px 20px;
-      }
-
-      .header {
-        background: white;
-        border-radius: 15px;
-        padding: 30px;
-        margin-bottom: 30px;
-        box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
-      }
-
-      .header h1 {
-        margin: 0 0 10px 0;
-        color: #333;
-      }
-
-      .header p {
-        color: #666;
-        margin: 0;
-      }
-
-      .header .user-info {
+        padding: 20px;
+        height: 100vh;
         display: flex;
-        justify-content: space-between;
+        flex-direction: column;
         align-items: center;
-        margin-top: 20px;
-        padding-top: 20px;
-        border-top: 1px solid #eee;
+        justify-content: center;
       }
 
-      .stats-container {
-        display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-        gap: 20px;
+      .settings-btn {
+        position: fixed;
+        top: 20px;
+        right: 20px;
+        background: rgba(255, 255, 255, 0.1);
+        backdrop-filter: blur(10px);
+        border: 2px solid rgba(255, 255, 255, 0.3);
+        border-radius: 50%;
+        width: 60px;
+        height: 60px;
+        font-size: 1.8rem;
+        cursor: pointer;
+        box-shadow: 0 8px 32px rgba(0, 0, 0, 0.3);
+        transition: all 0.3s;
+        z-index: 1000;
+        color: white;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
+
+      .settings-btn:hover {
+        transform: scale(1.1) rotate(90deg);
+        background: rgba(255, 255, 255, 0.2);
+        box-shadow: 0 12px 40px rgba(102, 126, 234, 0.5);
+      }
+
+      .logo-title {
+        font-size: 3.5rem;
+        font-weight: bold;
+        color: white;
         margin-bottom: 30px;
-      }
-
-      .stat-card {
-        background: white;
-        border-radius: 15px;
-        padding: 25px;
-        box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+        text-shadow: 0 4px 20px rgba(102, 126, 234, 0.8);
         text-align: center;
+        z-index: 10;
       }
 
-      .stat-number {
+      .main-content {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        position: relative;
+      }
+
+      /* Earth/Sphere */
+      .sphere {
+        position: relative;
+        width: 500px;
+        height: 500px;
+        border-radius: 50%;
+        background: 
+          radial-gradient(circle at 30% 30%, rgba(255, 255, 255, 0.3) 0%, transparent 50%),
+          linear-gradient(135deg, #4a90e2 0%, #2ecc71 30%, #3498db 70%, #1a5490 100%);
+        box-shadow: 
+          0 0 100px rgba(52, 152, 219, 0.6),
+          inset -30px -30px 80px rgba(0, 0, 0, 0.3),
+          inset 20px 20px 40px rgba(255, 255, 255, 0.1);
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        animation: rotate 60s linear infinite;
+      }
+
+      @keyframes rotate {
+        0% { background-position: 0% 0%; }
+        100% { background-position: 100% 100%; }
+      }
+
+      /* Land masses with people emojis */
+      .land-mass {
+        position: absolute;
+        display: flex;
+        flex-wrap: wrap;
+        gap: 6px;
+        align-items: center;
+        justify-content: center;
+        padding: 12px;
+        background: rgba(46, 204, 113, 0.8);
+        border-radius: 40% 60% 50% 40%;
+        box-shadow: 
+          inset 0 0 20px rgba(0, 0, 0, 0.2),
+          0 4px 10px rgba(46, 204, 113, 0.3);
+      }
+
+      .land-mass.continent1 {
+        top: 12%;
+        left: 8%;
+        width: 150px;
+        height: 110px;
+        transform: rotate(-15deg);
+        border-radius: 45% 55% 50% 45%;
+      }
+
+      .land-mass.continent2 {
+        top: 35%;
+        right: 12%;
+        width: 130px;
+        height: 100px;
+        border-radius: 50% 40% 60% 50%;
+        transform: rotate(20deg);
+      }
+
+      .land-mass.continent3 {
+        bottom: 18%;
+        left: 15%;
+        width: 135px;
+        height: 95px;
+        border-radius: 60% 40% 50% 60%;
+        transform: rotate(-25deg);
+      }
+
+      .land-mass.continent4 {
+        bottom: 25%;
+        right: 20%;
+        width: 120px;
+        height: 90px;
+        border-radius: 55% 45% 60% 40%;
+        transform: rotate(-12deg);
+      }
+
+      .sphere-content {
+        position: absolute;
+        text-align: center;
+        color: white;
+        z-index: 100;
+        text-shadow: 0 4px 12px rgba(0, 0, 0, 0.8);
+        background: rgba(0, 0, 0, 0.4);
+        padding: 20px;
+        border-radius: 20px;
+        backdrop-filter: blur(5px);
+      }
+
+      .sphere-title {
         font-size: 2.5rem;
         font-weight: bold;
-        color: #667eea;
-        margin: 10px 0;
-      }
-
-      .stat-label {
-        color: #666;
-        font-size: 0.9rem;
-      }
-
-      .navigation-grid {
-        display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-        gap: 20px;
-      }
-
-      .nav-card {
-        background: white;
-        border-radius: 15px;
-        padding: 30px;
-        box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
-        cursor: pointer;
-        transition: transform 0.2s, box-shadow 0.2s;
-        text-decoration: none;
-        color: inherit;
-        display: block;
-      }
-
-      .nav-card:hover {
-        transform: translateY(-5px);
-        box-shadow: 0 10px 25px rgba(0, 0, 0, 0.15);
-      }
-
-      .nav-card-icon {
-        font-size: 3rem;
         margin-bottom: 15px;
+        text-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
       }
 
-      .nav-card h3 {
-        margin: 0 0 10px 0;
-        color: #333;
-      }
-
-      .nav-card p {
-        color: #666;
-        margin: 0;
-        font-size: 0.9rem;
-      }
-
-      .logout-btn {
-        background: #dc3545;
-        color: white;
-        border: none;
-        padding: 10px 25px;
-        border-radius: 8px;
-        cursor: pointer;
-        font-size: 1rem;
-        transition: background 0.3s;
-      }
-
-      .logout-btn:hover {
-        background: #c82333;
-      }
-
-      .loading {
-        text-align: center;
-        padding: 40px;
-        color: white;
+      .person-emoji {
         font-size: 1.2rem;
+        animation: wave 2s ease-in-out infinite;
+        animation-delay: calc(var(--i) * 0.2s);
+        display: inline-block;
+      }
+
+      @keyframes wave {
+        0%, 100% { transform: translateY(0px) scale(1); }
+        50% { transform: translateY(-3px) scale(1.1); }
+      }
+
+      .welcome-text {
+        font-size: 1rem;
+        margin-top: 15px;
+        opacity: 0.9;
+      }
+
+      /* Navigation Buttons */
+      .nav-buttons {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        gap: 20px;
+        width: 500px;
+      }
+
+      .nav-btn {
+        background: rgba(255, 255, 255, 0.1);
+        backdrop-filter: blur(10px);
+        border: 2px solid rgba(255, 255, 255, 0.2);
+        border-radius: 20px;
+        padding: 30px;
+        cursor: pointer;
+        transition: all 0.3s;
+        text-decoration: none;
+        color: white;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        box-shadow: 0 8px 32px rgba(0, 0, 0, 0.3);
+        min-height: 140px;
+      }
+
+      .nav-btn:hover {
+        transform: translateY(-8px);
+        background: rgba(255, 255, 255, 0.15);
+        border-color: rgba(102, 126, 234, 0.8);
+        box-shadow: 0 12px 40px rgba(102, 126, 234, 0.4);
+      }
+
+      .nav-btn-icon {
+        font-size: 3rem;
+        margin-bottom: 12px;
+        filter: drop-shadow(0 4px 8px rgba(0, 0, 0, 0.3));
+      }
+
+      .nav-btn-title {
+        font-size: 1.2rem;
+        font-weight: bold;
+      }
+
+      /* Responsive */
+      @media (max-width: 1200px) {
+        .main-content {
+          flex-direction: column;
+          gap: 60px;
+        }
+
+        .sphere {
+          width: 300px;
+          height: 300px;
+        }
+
+        .nav-buttons {
+          width: 400px;
+        }
+      }
+
+      @media (max-width: 768px) {
+        .nav-buttons {
+          grid-template-columns: 1fr;
+          width: 300px;
+        }
+
+        .sphere {
+          width: 250px;
+          height: 250px;
+        }
+
+        .sphere-title {
+          font-size: 2rem;
+        }
       }
     </style>
   </head>
 
   <body>
+    <!-- Starry background -->
+    <div class="stars" id="stars"></div>
+
+    <button class="settings-btn" onclick="location.href='mySettings.html'" title="Settings">⚙️</button>
+
     <div class="home-container">
-      <div class="header">
-        <h1>🎓 Welcome to PeerSphere</h1>
-        <p id="welcomeMessage">Loading...</p>
-        <div class="user-info">
-          <div>
-            <strong>Logged in as:</strong> <span id="userEmail"></span>
+      <div class="logo-title">
+        🌍 PeerSphere
+        <div class="welcome-text" id="welcomeMessage" style="font-size: 1rem; margin-top: 10px; font-weight: normal;">Loading...</div>
+      </div>
+      
+      <div class="main-content">
+        <!-- Earth/Sphere -->
+        <div class="sphere">
+          <!-- Land masses with people (4 continents) -->
+          <div class="land-mass continent1">
+            <span class="person-emoji" style="--i: 0">👨‍💼</span>
+            <span class="person-emoji" style="--i: 1">👩‍🎓</span>
+            <span class="person-emoji" style="--i: 2">👨‍🎓</span>
+            <span class="person-emoji" style="--i: 3">👩</span>
+            <span class="person-emoji" style="--i: 4">👨</span>
           </div>
-          <button class="logout-btn" onclick="handleLogout()">Logout</button>
+          <div class="land-mass continent2">
+            <span class="person-emoji" style="--i: 1">👨‍💻</span>
+            <span class="person-emoji" style="--i: 2">👩‍💻</span>
+            <span class="person-emoji" style="--i: 3">👨‍🏫</span>
+            <span class="person-emoji" style="--i: 4">👩‍🏫</span>
+          </div>
+          <div class="land-mass continent3">
+            <span class="person-emoji" style="--i: 0">👩‍🔬</span>
+            <span class="person-emoji" style="--i: 1">👨‍🔬</span>
+            <span class="person-emoji" style="--i: 2">👩‍⚕️</span>
+            <span class="person-emoji" style="--i: 3">👨‍⚕️</span>
+            <span class="person-emoji" style="--i: 4">👨‍🎨</span>
+          </div>
+          <div class="land-mass continent4">
+            <span class="person-emoji" style="--i: 0">👩‍🎤</span>
+            <span class="person-emoji" style="--i: 1">👨‍🚀</span>
+            <span class="person-emoji" style="--i: 2">👩‍🚀</span>
+            <span class="person-emoji" style="--i: 3">👨‍🔧</span>
+          </div>
+
+          <!-- Navigation Buttons inside sphere -->
+          <div class="nav-buttons">
+            <a href="mySpheres.html" class="nav-btn">
+              <div class="nav-btn-icon">🌐</div>
+              <div class="nav-btn-title">My Spheres</div>
+            </a>
+
+            <a href="joinSphere.html" class="nav-btn">
+              <div class="nav-btn-icon">🔗</div>
+              <div class="nav-btn-title">Join Sphere</div>
+            </a>
+
+            <a href="createSphere.html" class="nav-btn">
+              <div class="nav-btn-icon">➕</div>
+              <div class="nav-btn-title">Create Sphere</div>
+            </a>
+
+            <a href="myWork.html" class="nav-btn">
+              <div class="nav-btn-icon">📝</div>
+              <div class="nav-btn-title">My Work</div>
+            </a>
+          </div>
         </div>
-      </div>
-
-      <div class="stats-container">
-        <div class="stat-card">
-          <div class="stat-label">My Spheres</div>
-          <div class="stat-number" id="groupCount">-</div>
-        </div>
-        <div class="stat-card">
-          <div class="stat-label">Total Members</div>
-          <div class="stat-number" id="memberCount">-</div>
-        </div>
-        <div class="stat-card">
-          <div class="stat-label">Study Groups</div>
-          <div class="stat-number" id="activeGroups">-</div>
-        </div>
-      </div>
-
-      <div class="navigation-grid">
-        <a href="mySpheres.html" class="nav-card">
-          <div class="nav-card-icon">🌐</div>
-          <h3>My Spheres</h3>
-          <p>View and manage your study groups</p>
-        </a>
-
-        <a href="createSphere.html" class="nav-card">
-          <div class="nav-card-icon">➕</div>
-          <h3>Create Sphere</h3>
-          <p>Start a new study group</p>
-        </a>
-
-        <a href="joinSphere.html" class="nav-card">
-          <div class="nav-card-icon">🔗</div>
-          <h3>Join Sphere</h3>
-          <p>Join an existing group with a code</p>
-        </a>
-
-        <a href="myWork.html" class="nav-card">
-          <div class="nav-card-icon">📚</div>
-          <h3>My Work</h3>
-          <p>View your notes and flashcards</p>
-        </a>
-
-        <a href="peerCalendar.html" class="nav-card">
-          <div class="nav-card-icon">📅</div>
-          <h3>Calendar</h3>
-          <p>View upcoming study sessions</p>
-        </a>
-
-        <a href="mySettings.html" class="nav-card">
-          <div class="nav-card-icon">⚙️</div>
-          <h3>Settings</h3>
-          <p>Manage your account</p>
-        </a>
       </div>
     </div>
 
     <script src="../api.js"></script>
     <script src="../session-manager.js"></script>
     <script>
-      // Initialize
-      const api = new PeerSphereAPI();
-
       // Check authentication
       if (!SessionManager.requireAuth()) {
         // Will redirect to login if not authenticated
       }
 
-      // Load user data
-      async function loadDashboard() {
-        const userName = SessionManager.getUserName();
-        const userEmail = SessionManager.getUserEmail();
-        const userId = SessionManager.getUserId();
+      // Display welcome message
+      const userName = SessionManager.getUserName();
+      document.getElementById('welcomeMessage').textContent = `Welcome, ${userName}! 👋`;
 
-        document.getElementById('welcomeMessage').textContent = `Hello, ${userName}! 👋`;
-        document.getElementById('userEmail').textContent = userEmail;
-
-        // Load user's groups
-        try {
-          const groups = await api.getUserGroups(userId);
-          document.getElementById('groupCount').textContent = groups.length;
-          document.getElementById('activeGroups').textContent = groups.length;
-
-          // Calculate total members across all groups
-          let totalMembers = 0;
-          for (const group of groups) {
-            try {
-              const groupDetail = await api.getGroup(group.groupId);
-              // Assuming group has memberCount or we'd need to fetch members
-              totalMembers += 1; // Placeholder
-            } catch (e) {
-              console.error('Error loading group details:', e);
-            }
-          }
-          document.getElementById('memberCount').textContent = totalMembers || groups.length;
-
-        } catch (error) {
-          console.error('Error loading dashboard:', error);
-          document.getElementById('groupCount').textContent = '0';
-          document.getElementById('memberCount').textContent = '0';
-          document.getElementById('activeGroups').textContent = '0';
-        }
+      // Generate stars
+      const starsContainer = document.getElementById('stars');
+      for (let i = 0; i < 200; i++) {
+        const star = document.createElement('div');
+        star.className = 'star';
+        star.style.width = Math.random() * 3 + 'px';
+        star.style.height = star.style.width;
+        star.style.left = Math.random() * 100 + '%';
+        star.style.top = Math.random() * 100 + '%';
+        star.style.animationDelay = Math.random() * 3 + 's';
+        starsContainer.appendChild(star);
       }
-
-      function handleLogout() {
-        SessionManager.clearSession();
-        window.location.href = '../index.html';
-      }
-
-      // Load dashboard on page load
-      loadDashboard();
     </script>
   </body>
 </html>
