--- a/pages/mySettings.html
+++ b/pages/mySettings.html
@@ -4,12 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-    <title>MySpheres</title>
-    <link rel="stylesheet" href="../styles.css" />
-        <style>
+    <script src="../config.js"></script>
+    <link rel="stylesheet" href="../styles/space-theme.css">
+    <title>My Settings - PeerSphere</title>
+    <style>
       body {
-        background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
         min-height: 100vh;
         margin: 0;
         font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
